[package]
name = "bfrs"
version = "0.1.0"
authors = ["Piyush Rungta <piyushrungta25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2"

[[bench]]
name = "benches"
harness = false
